*junior software engineer - changed wording

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="mainContent">
     	<div class="whatAbout"><h2>What I'm About</h2>
 
-			<p>Former software engineer out of the biz for a little while raising my two littles who are about to be five and two. Excited to return to software development with a new enthusiasm and sense of purpose. I have a lot to refresh on and learn!</p>
+			<p>Former junior software engineer out of the biz for a little while raising my two littles who are about to be five and two. Excited to return to software development with a new enthusiasm and sense of purpose. I have a lot to refresh on and learn!</p>
 			
 			<p>Navy vet. Side part wearer. Knitter. Former runner. Baker. Coffee lover. </p>
 		</div>
